Fixes #19784: Move from pixels to rems, add a margin-bottom: 0; to keep things aligned

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -140,6 +140,7 @@
 // Dropdown section headers
 .dropdown-header {
   display: block;
+  margin-bottom: 0; // for use with heading elements
   padding: $dropdown-padding-y $dropdown-item-padding-x;
   font-size: $font-size-sm;
   color: $dropdown-header-color;
